--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tweet To Vote on Florida Bills. A Tabs on Tallahassee - Code for Orlando Project",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Error: no build specified\" && exit 1"
+    "test": "echo \"Error: no test specified\"",
+    "build": "echo \"Error: no build specified\""
   },
   "repository": {
     "type": "git",
