--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "build": "echo \"Error: no build specified\""
+    "build": "echo \"Error: no build specified\"",
+    "start": "cd src && python -m SimpleHTTPServer 8000"
   },
   "repository": {
     "type": "git",
