--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/codehangar/flvote/issues"
   },
-  "homepage": "https://github.com/codehangar/flvote#readme"
+  "homepage": "https://github.com/codehangar/flvote#readme",
+  "dependencies": {
+    "dotenv": "^1.2.0",
+    "express": "^4.13.3",
+    "http": "0.0.0",
+    "http-proxy": "^1.12.0",
+    "oauth": "^0.9.14",
+    "request": "^2.67.0"
+  }
 }
