--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
   "dependencies": {
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
-    "http": "0.0.0",
-    "http-proxy": "^1.12.0",
-    "oauth": "^0.9.14",
-    "request": "^2.67.0"
+    "twitter": "^1.2.5"
   }
 }
