--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "build": "echo \"Error: no build specified\"",
-    "start": "cd src && python -m SimpleHTTPServer 8000"
+    "start": "node uiserver.js"
   },
   "repository": {
     "type": "git",
